fix: margin top card body on activity page

--- a/activity.html
+++ b/activity.html
@@ -86,7 +86,7 @@
                 <div class="card-header bg-transparent border-0">
                     My Class
                 </div>
-                <div class="card-body p-0">
+                <div class="card-body p-0 mt-0">
                     <div class="table-responsive">
                         <table class="table table-borderless my-class-table table-responsive">
                             <thead>
@@ -121,7 +121,8 @@
                                     <th scope=" row"><input type="checkbox" name="" id=""></th>
                                     <td>HTML for Beginners</td>
                                     <td>Software</td>
-                                    <td>HTML from scratch</td>
+                                    <td class="td-truncate">HTML from scratch HTML from scratch HTML from scratch HTML
+                                        from scratch HTML from scratch</td>
                                     <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
@@ -134,7 +135,13 @@
                                     <th scope=" row"><input type="checkbox" name="" id=""></th>
                                     <td>History of Europe</td>
                                     <td>History</td>
-                                    <td>The history of Europe concerns itself...</td>
+                                    <td class="td-truncate">
+                                        The adfsdf asdfadfa dfasd fdasfhistory of Europe concerns itself
+                                        The history of Europe concerns itself
+                                        The history of Europe concerns itself
+                                        The history of Europe concerns itself
+                                        The history of Europe concerns itself
+                                    </td>
                                     <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
@@ -156,7 +163,7 @@
                 <div class="card-header bg-transparent border-0 my-2">
                     New Class
                 </div>
-                <div class="card-body">
+                <div class="card-body mt-0">
                     <div class="input-group">
                         <input type="text" class="form-control col-12" placeholder="Quick Search"
                             aria-label="Quick Search" aria-describedby="button-addon2">
@@ -191,7 +198,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -200,7 +207,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -209,7 +216,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -218,7 +225,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -227,7 +234,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -236,7 +243,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -245,7 +252,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -254,7 +261,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -263,7 +270,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
@@ -272,7 +279,7 @@
                                 <tr>
                                     <td>Know more Javascript</td>
                                     <td>Software</td>
-                                    <td>Javascript from the basic for...</td>
+                                    <td class="td-truncate">Javascript from the basic for human being</td>
                                     <td>Beginner</td>
                                     <td>Free</td>
                                     <td scope="col"><a class="badge btn-success rounded-15px">Register</a> </td>
