--- a/activity-2.html
+++ b/activity-2.html
@@ -130,7 +130,21 @@
                                     <td>Front-end fundamentals</td>
                                     <td>Software</td>
                                     <td>Learn the fundamentals of front...</td>
-                                    <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     </td>
                                     <td><span class="score">88</span></td>
@@ -144,7 +158,21 @@
                                     <td>HTML for Beginners</td>
                                     <td>Software</td>
                                     <td>HTML from scratch</td>
-                                    <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="25, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">25%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -157,7 +185,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -170,7 +212,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -183,7 +239,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -196,7 +266,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Completed</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -209,7 +293,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -222,7 +320,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -235,7 +347,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -248,7 +374,21 @@
                                     <td>History of Europe</td>
                                     <td>History</td>
                                     <td>The history of Europe concerns itself...</td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
