--- a/activity.html
+++ b/activity.html
@@ -108,7 +108,21 @@
                                     <td>Front-end fundamentals</td>
                                     <td>Software</td>
                                     <td>Learn the fundamentals of front...</td>
-                                    <td><img src="assets/images/icons/progress-bar-1.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     </td>
                                     <td><span class="score">88</span></td>
@@ -123,7 +137,21 @@
                                     <td>Software</td>
                                     <td class="td-truncate">HTML from scratch HTML from scratch HTML from scratch HTML
                                         from scratch HTML from scratch</td>
-                                    <td><img src="assets/images/icons/progress-bar-2.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="30, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">30%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(81, 231, 43, 1);">77</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
@@ -142,7 +170,21 @@
                                         The history of Europe concerns itself
                                         The history of Europe concerns itself
                                     </td>
-                                    <td><img src="assets/images/icons/progress-bar-3.svg" alt=""></td>
+                                    <td>
+                                        <div class="flex-wrapper">
+                                            <div class="single-chart">
+                                                <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                                    <path class="circle-bg" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                    a 15.9155 15.9155 0 0 1 0 31.831
+                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                                    <text x="18" y="20.35" class="percentage">80%</text>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td><span class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
                                     <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
                                     <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable"
