--- a/dashboard-2.html
+++ b/dashboard-2.html
@@ -181,17 +181,38 @@
                     <div class="date-detail">
                         <div class="date-time"><span>08.00 - 09.40</span></div>
                         <div class="lessons">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <span>Introduction to Banking Finance</span> <img
-                                    src="assets/images/icons/progress-bar-1.svg" alt="">
+                            <div class="d-flex align-items-center justify-content-between p-3">
+                                <span style="flex:3;text-align:left">Introduction to Banking Finance</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="date-detail">
                         <div class="date-time"><span>11.00 - 11.40</span></div>
                         <div class="lessons">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <span>History of Europe</span> <img src="assets/images/icons/progress-bar-1.svg" alt="">
+                            <div class="d-flex align-items-center justify-content-between p-3">
+                                <span style="flex:3;text-align:left">History of Europe</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
