--- a/dashboard.html
+++ b/dashboard.html
@@ -182,12 +182,33 @@
                         <div class="date-time"><span>08.00-09.00</span></div>
                         <div class="lessons">
                             <div class="d-flex align-items-center justify-content-between mb-2">
-                                <span>Introduction to Banking Finance</span> <img
-                                    src="assets/images/icons/progress-bar-1.svg" alt="">
+                                <span style="flex:3;text-align:left">Introduction to Banking Finance</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
+
                             </div>
                             <div class="d-flex align-items-center justify-content-between">
-                                <span>Trygonometry</span>
-                                <img src="assets/images/icons/progress-bar-1.svg" alt="">
+                                <span style="flex:3;text-align:left">Trygonometry</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -195,7 +216,18 @@
                         <div class="date-time"><span>11.00 - 11.40</span></div>
                         <div class="lessons">
                             <div class="d-flex align-items-center justify-content-between">
-                                <span>History of Europe</span> <img src="assets/images/icons/progress-bar-1.svg" alt="">
+                                <span style="flex:3;text-align:left">History of Europe</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -203,8 +235,18 @@
                         <div class="date-time"><span>13.00 - 15.30</span></div>
                         <div class="lessons">
                             <div class="d-flex align-items-center justify-content-between">
-                                <span>Fundamental of Front End Development</span> <img
-                                    src="assets/images/icons/progress-bar-1.svg" alt="">
+                                <span style="flex:3;text-align:left">Fundamental of Front End Development</span>
+                                <div style="flex:1;margin:0;padding:0;box-shadow: none;">
+                                    <svg viewbox="0 0 36 36" class="circular-chart blue">
+                                        <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                        <text x="18" y="20.35" class="percentage">80%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
