fix: fix table responsive activity

--- a/activity-4.html
+++ b/activity-4.html
@@ -148,9 +148,9 @@
                                 border-spacing:0 5px;">
                                     <tbody>
                                         <tr>
-                                            <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                            <td>Know more Javascript</td>
-                                            <td>Software</td>
+                                            <th scope=" row"><input type="checkbox" name="" id="" checked></th>
+                                            <td>HTML Essential Training</td>
+                                            <td class="completed">You have completed this topic</td>
                                             <td><span class="score">88</span></td>
                                         </tr>
                                         <tr>
