refactor: change id dashboard-peserta to main-dashboard

--- a/dashboard-2.html
+++ b/dashboard-2.html
@@ -87,7 +87,7 @@
                 <div class="empty-menu-link"></div>
             </div>
         </aside>
-        <div id="dashboard-peserta">
+        <div id="main-dashboard">
             <div class="news-card rounded-10px">
                 <h5 class="news-title">News</h5>
                 <div class="news-image-container">
