--- a/dashboard.html
+++ b/dashboard.html
@@ -87,7 +87,7 @@
                 <div class="empty-menu-link"></div>
             </div>
         </aside>
-        <div id="dashboard-peserta">
+        <div id="main-dashboard">
             <div class="news-card rounded-10px">
                 <h5 class="news-title">News</h5>
                 <div class="news-image-container">
@@ -167,7 +167,8 @@
                             <span class="date">12</span>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center justify-content-center touchable py-3" style="
+                    <a href="dashboard-2.html" class="d-flex align-items-center justify-content-center touchable py-3"
+                        style="
                     font-family: Roboto;
                     font-size: 16px;
                     font-style: normal;
@@ -177,7 +178,7 @@
                         ">All schedule&nbsp;</span>
                         <span style="color: rgba(173, 169, 187, 1);
                         ">ForYou</span>
-                    </div>
+                    </a>
                     <div class="date-detail">
                         <div class="date-time"><span>08.00-09.00</span></div>
                         <div class="lessons">
