fix: add anchor tag to navigate

--- a/activity-3.html
+++ b/activity-3.html
@@ -133,7 +133,9 @@
                     <div class="class-description-container">
                         <div class="tab-menu-container">
                             <div class="tab-menu touchable active">Information</div>
-                            <div class="tab-menu touchable">Class Progress</div>
+                            <a href="activity-4.html" class="tab-menu touchable">
+                                Class Progress
+                            </a>
                             <div class="tab-menu touchable">Class Discussion</div>
                         </div>
                         <div class="description">
