--- a/activity.html
+++ b/activity.html
@@ -110,18 +110,16 @@
                                 <td class="table-category">Software</td>
                                 <td class="td-truncate table-description">Learn the fundamentals of front...</td>
                                 <td>
-                                    <div class="flex-wrapper">
-                                        <div class="single-chart">
-                                            <svg viewbox="0 0 36 36" class="circular-chart blue">
-                                                <path class="circle-bg" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <text x="18" y="20.35" class="percentage">80%</text>
-                                            </svg>
-                                        </div>
+                                    <div class="single-chart m-0">
+                                        <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
+                                            <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <text x="18" y="20.35" class="percentage">80%</text>
+                                        </svg>
                                     </div>
                                 </td>
                                 <td class="table-status"><span
@@ -140,18 +138,16 @@
                                     scratch HTML
                                     from scratch HTML from scratch</td>
                                 <td>
-                                    <div class="flex-wrapper">
-                                        <div class="single-chart">
-                                            <svg viewbox="0 0 36 36" class="circular-chart blue">
-                                                <path class="circle-bg" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <path class="circle" stroke-dasharray="30, 100" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <text x="18" y="20.35" class="percentage">30%</text>
-                                            </svg>
-                                        </div>
+                                    <div class="single-chart m-0">
+                                        <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
+                                            <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <path class="circle" stroke-dasharray="30, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <text x="18" y="20.35" class="percentage">30%</text>
+                                        </svg>
                                     </div>
                                 </td>
                                 <td class="table-status"><span
@@ -166,25 +162,19 @@
                                 <td>History of Europe</td>
                                 <td class="table-category">History</td>
                                 <td class="td-truncate table-description">
-                                    The adfsdf asdfadfa dfasd fdasfhistory of Europe concerns itself
-                                    The history of Europe concerns itself
-                                    The history of Europe concerns itself
-                                    The history of Europe concerns itself
-                                    The history of Europe concerns itself
+                                    The of Europe concerns itself as the best history in the world (?)
                                 </td>
                                 <td>
-                                    <div class="flex-wrapper">
-                                        <div class="single-chart">
-                                            <svg viewbox="0 0 36 36" class="circular-chart blue">
-                                                <path class="circle-bg" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
-                                                    a 15.9155 15.9155 0 0 1 0 31.831
-                                                    a 15.9155 15.9155 0 0 1 0 -31.831" />
-                                                <text x="18" y="20.35" class="percentage">80%</text>
-                                            </svg>
-                                        </div>
+                                    <div class="single-chart">
+                                        <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
+                                            <path class="circle-bg" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <path class="circle" stroke-dasharray="80, 100" d="M18 2.0845
+                                                a 15.9155 15.9155 0 0 1 0 31.831
+                                                a 15.9155 15.9155 0 0 1 0 -31.831" />
+                                            <text x="18" y="20.35" class="percentage">80%</text>
+                                        </svg>
                                     </div>
                                 </td>
                                 <td class="table-status"><span
@@ -196,8 +186,10 @@
                         </tbody>
                     </table>
                     <div class="d-flex align-items-center justify-content-center">
-                        <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
-                                width="12" height="12" alt=""></span>
+                        <a href="activity-2.html">
+                            <span class="view-all touchable">view all <img src="assets/images/icons/forward-icon.svg"
+                                    width="12" height="12" alt=""></span>
+                        </a>
                     </div>
                 </div>
             </div>
