feat: add background gradient for perfect score

--- a/activity-2.html
+++ b/activity-2.html
@@ -198,16 +198,18 @@
                                 </td>
                                 <td class="table-status"><span
                                         class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <td><span class="score" style="color: rgba(204, 231, 43, 1);
+                                    ">63</span></td>
                                 <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
                                 </td>
                             </tr>
 
                             <tr>
                                 <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td class="table-category">History</td>
-                                <td class="td-truncate table-description">The history of Europe concerns itself...</td>
+                                <td>Trigonometry</td>
+                                <td class="table-category">Math</td>
+                                <td class="td-truncate table-description">Trigonometry helps us find angles from any
+                                    tringular</td>
                                 <td>
                                     <div class="single-chart">
                                         <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
@@ -223,16 +225,17 @@
                                 </td>
                                 <td class="table-status"><span
                                         class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <td><span class="score" style="color: rgba(43, 231, 208, 1);">95</span></td>
                                 <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
                                 </td>
                             </tr>
 
-                            <tr>
-                                <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td class="table-category">History</td>
-                                <td class="td-truncate table-description">The history of Europe concerns itself...</td>
+                            <tr class="perfect">
+                                <th scope=" row"><input type="checkbox" name="" id="" checked></th>
+                                <td>Algebra</td>
+                                <td class="table-category">Math</td>
+                                <td class="td-truncate table-description">Branch of mathematics dealing with any
+                                    calculation</td>
                                 <td>
                                     <div class="single-chart">
                                         <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
@@ -248,16 +251,18 @@
                                 </td>
                                 <td class="table-status"><span
                                         class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <td><span class="score" style="color: rgba(43, 231, 208, 1);
+                                    ">100</span></td>
                                 <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
                                 </td>
                             </tr>
 
                             <tr>
                                 <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td class="table-category">History</td>
-                                <td class="td-truncate table-description">The history of Europe concerns itself...</td>
+                                <td>Molecular Biology</td>
+                                <td class="table-category">Science</td>
+                                <td class="td-truncate table-description">Study the composition, structure of molecular
+                                    cell</td>
                                 <td>
                                     <div class="single-chart">
                                         <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
@@ -280,9 +285,10 @@
 
                             <tr>
                                 <th scope=" row"><input type="checkbox" name="" id=""></th>
-                                <td>History of Europe</td>
-                                <td class="table-category">History</td>
-                                <td class="td-truncate table-description">The history of Europe concerns itself...</td>
+                                <td>Banking Finance</td>
+                                <td class="table-category">Finance</td>
+                                <td class="td-truncate table-description">Explore the dynamic, fast-paced banking
+                                    finance in real world</td>
                                 <td>
                                     <div class="single-chart">
                                         <svg viewbox="0 0 36 36" class="circular-chart blue m-0">
@@ -298,7 +304,8 @@
                                 </td>
                                 <td class="table-status"><span
                                         class="badge badge-ongoing p-2 rounded-15px">Ongoing</span>
-                                <td><span class="score" style="color: rgba(204, 231, 43, 1);">66</span></td>
+                                <td><span class="score" style="color: rgba(230, 66, 43, 1);
+                                    ">22</span></td>
                                 <td scope="col"><img src="assets/images/icons/list-icon.svg" class="touchable" alt="">
                                 </td>
                             </tr>
