fix: sidebar mobile version on activity, message container on dashboard 1

--- a/activity-2.html
+++ b/activity-2.html
@@ -82,7 +82,7 @@
                 <div class="empty-menu-link"></div>
             </div>
         </aside>
-        <div id="main-content" class="bg-transparent p-3 d-flex flex-column justify-content-start">
+        <div id="main-content" class="bg-transparent p-3">
 
             <h1 class="d-flex align-items-center">
                 <a href="activity.html">
