--- a/activity-3.html
+++ b/activity-3.html
@@ -82,9 +82,7 @@
                 <div class="empty-menu-link"></div>
             </div>
         </aside>
-        <div id="main-content" class="bg-transparent p-3 d-flex flex-column justify-content-start">
-
-
+        <div id="main-content" class="bg-transparent p-3">
 
             <h1 class="d-flex align-items-center">
                 <a href="activity.html">
@@ -92,8 +90,6 @@
                 </a>
                 Know more javascript
             </h1>
-
-
 
             <div class="card bg-white border-0 p-0 rounded-10px">
 
