--- a/activity.html
+++ b/activity.html
@@ -82,7 +82,7 @@
                 <div class="empty-menu-link"></div>
             </div>
         </aside>
-        <div id="main-content" class="bg-transparent p-3 d-flex flex-column justify-content-start">
+        <div id="main-content" class="bg-transparent p-3 d-flex">
             <h1 class="">Activity</h1>
             <div class="card bg-transparent border-0 p-0">
                 <div class="card-header bg-transparent border-0">
