--- a/dashboard.html
+++ b/dashboard.html
@@ -253,7 +253,7 @@
                 </div>
             </div>
         </div>
-        <aside id="message-container" class="m-0">
+        <aside id="message-container">
             <div class="d-flex flex-row justify-content-between align-items-center">
                 <h3 class="mb-0">Message</h3>
                 <img src="assets/images/icons/circle-plus-icon.svg" class="touchable" alt="">
